Using pythonw.exe instead of cmd.exe in windows to avoid a black window on every right click. Adding some documentation

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
 
 	"preferences": [
 		{
-			"name": "shellPath",
-			"title": "Path to shell",
-			"description": "Select the path to the shell that can handle the output redirection to a file",
+			"name": "pythonPath",
+			"title": "Path to python",
+			"description": "Select the path to the python executable that should be used to run livestreamer",
 			"type": "file"
 		},
 		{
