--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
 	"license": "MPL 2.0",
 	"version": "1.0.1",
 	"icon": "data/icon-64.png",
+	"permissions": { 
+		"private-browsing": true
+	},
 
 	"preferences": [
 		{
