--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"license": "MPL 2.0",
 	"version": "1.0.2",
 	"main" : "lib/main.js",
-	"icon": "data/icon-64.png",
+	"icon": "resource://livestreamer-dot-launcher-at-buxxi-dot-se/data/icon-64.png",
 	"permissions": { 
 		"private-browsing": true
 	},
